--- a/fanuc_lrmate200ic_support/package.xml
+++ b/fanuc_lrmate200ic_support/package.xml
@@ -41,7 +41,8 @@
   <url type="bugtracker">https://github.com/ros-industrial/fanuc/issues</url>
   <url type="repository">https://github.com/ros-industrial/fanuc</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <!-- <buildtool_depend>catkin</buildtool_depend> -->
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <test_depend>roslaunch</test_depend>
 
@@ -54,6 +55,7 @@
   <exec_depend>xacro</exec_depend>
 
   <export>
+    <build_type>ament_cmake</build_type>
     <architecture_independent />
     <rosindex>
       <tags>
