--- a/fanuc_resources/package.xml
+++ b/fanuc_resources/package.xml
@@ -25,9 +25,11 @@
   <url type="bugtracker">https://github.com/ros-industrial/fanuc/issues</url>
   <url type="repository">https://github.com/ros-industrial/fanuc</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <!-- <buildtool_depend>catkin</buildtool_depend> -->
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <export>
+    <build_type>ament_cmake</build_type>
     <architecture_independent />
     <rosindex>
       <tags>
